Skeleton for end-to-end response time analysis is added.

--- a/algo/CMakeLists.txt
+++ b/algo/CMakeLists.txt
@@ -11,12 +11,14 @@ INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}
       model/
       operations/
       verifier/
+      responseTimeEstimator/
       designer/
       )
 SET ( COMPONENTS
       interface
       operations
       verifier
+      responseTimeEstimator
       designer
       )
 
